# uacpy

./: .gitignore  .gitmodules  AUDIT.md  AUDIT_SCIENCE.md  CI.md  CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  install.bat  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: DEV.md
uacpy/: __init__.py  _log.py  _stack.py
uacpy/acoustic_signal/: __init__.py  advanced.py  analysis.py  generation.py  processing.py
uacpy/core/: __init__.py  absorption.py  acoustics.py  attenuation.py  constants.py  environment.py  exceptions.py  field.py  logger.py  materials.py  metrics.py  model_utils.py  receiver.py  results.py  source.py
uacpy/examples/: example_01_basic_shallow_water.py  example_02_sound_speed_profiles.py  example_03_multi_frequency.py  example_03_range_dependent_bathymetry.py  example_04_bellhop_advanced.py  example_04_complex_bathymetry.py  example_05_ram_advanced.py  example_05_range_dependent_full.py  example_06_kraken_advanced.py  example_06_multi_frequency.py  example_07_all_models_comparison.py  example_07_bellhop_advanced.py  example_08_long_range.py  example_08_ram_advanced.py  example_09_ambient_noise.py  example_09_kraken_advanced.py  example_10_signal_processing.py  example_10_thermal_fronts.py  example_11_all_models_comparison.py  example_11_bellhop_run_modes.py  example_12_attenuation_models.py  example_12_maximum_complexity.py  example_13_long_range.py  example_13_oases_suite.py  example_14_ambient_noise.py  example_14_new_plotting_features.py  example_14_plotting_features.py  example_15_elastic_boundaries_comparison.py  example_15_signal_processing.py  example_16_bellhop_bounce_integration.py  example_16_bellhop_run_modes.py  example_17_attenuation_models.py  example_17_boundary_conditions_layered.py  example_18_boundary_conditions.py  example_18_rd_bottom_krakenfield_vs_ram.py  example_19_broadband_comparison.py  example_19_oases_suite.py  example_20_ram_backends.py  example_20_sparc_time_domain.py  example_21_bellhop_vs_ramsurf.py  (+16 more)
uacpy/io/: __init__.py  _fortran_helpers.py  at_env_writer.py  bathy_io.py  bellhop_writer.py  boundary_io.py  bty_writer.py  env_reader.py  env_writer.py  file_manager.py  flp_reader.py  flp_writer.py  grn_reader.py  modes_reader.py  mpirams_reader.py  mpirams_writer.py  oalib_reader.py  oalib_writer.py  oases_reader.py  oases_writer.py  output_reader.py  ramsurf_reader.py  ramsurf_writer.py  refl_io.py  rts_reader.py  shd_utils.py  ts_reader.py  units.py  utils.py
uacpy/models/: __init__.py  _pade_optimizer.py  _pe_phase.py  base.py  bellhop.py  bounce.py  coupled_modes.py  kraken.py  oases.py  ram.py  scooter.py  sparc.py
uacpy/noise/: __init__.py  noise.py
uacpy/tests/: __init__.py  conftest.py  test_advanced_features.py  test_animate_field.py  test_bellhop.py  test_benchmarks.py  test_bottom_loss.py  test_boundary_conditions.py  test_capability_flags.py  test_collapse_policy.py  test_comprehensive_models.py  test_core_classes.py  test_cross_model_agreement.py  test_cross_model_broadband.py  test_elastic_boundaries.py  test_env_reader.py  test_examples_integration.py  test_exceptions.py  test_input_validation.py  test_io_functions.py  test_kraken.py  test_materials.py  test_metadata_file_paths.py  test_metrics.py  test_mfp_processors.py  test_modal_model_agreement.py  test_models.py  test_modes_perturbation.py  test_noise.py  test_oases_comprehensive.py  test_oases_models.py  test_oases_modes.py  test_oases_warnings.py  test_oasn_executable.py  test_pade_optimizer.py  test_pe_phase.py  test_physical_sanity.py  test_ram.py  test_ram_backends.py  test_range_depth_dependent.py  (+11 more)
uacpy/utils/: __init__.py
uacpy/visualization/: __init__.py  plots.py  quickplot.py  style.py
